Complete exercise 02 and 03 of intro to css
Forgot to push 02, lumping it in with 03. Learned id
selectors and grouping selectors.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,14 @@
 /* Add CSS Styling */
+.buttstyle {
+    font-size: 28px;
+    font-family: "Helvetica", "Times New Roman", sans-serif;
+}
+
+#yellow {
+    background-color: yellow;
+}
+
+#blacknwhite {
+    background-color: black;
+    color: white;
+}
