--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,19 @@
 /* Add CSS Styling */
+p {
+    background-color: rgba(255, 114, 114, 0.881);
+    font-family: "Verdana", "DejaVu Sans", sans-serif;
+}
+
+.second {
+    color: blue;
+    font-size: 36px;
+}
+
+.font-size24 {
+    font-size: 24px;
+}
+
+.fourth {
+    background-color: rgb(112, 255, 112);
+    font-weight: bold;
+}
