Update solution for 03
Updated solution to a correct syntax, instead of alternate
route of using id's and classes. I understand the goal of the
lesson was to learn to group certain attributes for multiple classes.

--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,14 +1,14 @@
 /* Add CSS Styling */
-.buttstyle {
+.yellow, .blacknwhite {
     font-size: 28px;
-    font-family: "Helvetica", "Times New Roman", sans-serif;
+    font-family: Helvetica, "Times New Roman", sans-serif;
 }
 
-#yellow {
+.yellow {
     background-color: yellow;
 }
 
-#blacknwhite {
+.blacknwhite {
     background-color: black;
     color: white;
 }
